# mactop

./: .bumpversion.cfg  .gitignore  README.md  makefile  me.sh  pyproject.toml
.github/workflows/: ismc.yaml
mactop/: const.py  layout_loader.py  main.py  metrics_store.py
mactop/layouts/: __init__.py
mactop/metrics_source/: __init__.py  ioreg.py  powermetrics.py  psutil_manager.py
mactop/panels/: __init__.py  _base.py  battery.py  cpu_freq.py  cpu_percpu_usage.py  cpu_total_usage_bar.py  cpu_total_usage_text.py  disk.py  energy.py  loadavg.py  m1_cpu.py  m1_gpu.py  m1cpu_freq.py  network_iobyte_rate_text.py  network_iopacket_rate_text.py  network_sparkline.py  sensors.py  swap_memory.py  tasks.py  uptime.py  virtual_memory.py
mactop/themes/: m1.xml  mactop.xml
mactop/utils/: __init__.py  formatting.py  rwlock.py
mactop/widgets/: __init__.py  colorbar.py  dynamic_text.py  header.py  labeled_colorbar.py  labeled_progress.py  labeled_sparkline.py  labeled_vstringbar.py  vstringbar.py
tests/ioreg/: test_battery_parse.py  test_utils.py
tests/ioreg/panels/: test_battery.py
