[tool.poetry]
name = "mactop"
version = "0.1.10"
description = "Htop for macbook."
authors = ["laixintao <laixintaoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.35.1"
click = "^8.1.7"
psutil = "^5.9.5"


[tool.poetry.scripts]
mactop = 'mactop.main:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
